[project]
name = "screen-capture-mcp"
version = "0.1.0"
description = "MCP Server for screen recording and screenshot - 让 AI 能看见屏幕"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
screen-capture-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
